# hello-erpc

./: .gitignore  CMakeLists.txt  README.md
cmake/: Finderpc.cmake
src/: c_erpc_matrix_multiply_client.cpp  c_erpc_matrix_multiply_client.h  c_erpc_matrix_multiply_server.cpp  c_erpc_matrix_multiply_server.h  c_erpc_servo_configure_client.cpp  c_erpc_servo_configure_client.h  c_erpc_servo_configure_server.cpp  c_erpc_servo_configure_server.h  erpc_matrix_multiply.erpc  erpc_matrix_multiply_client.cpp  erpc_matrix_multiply_client.hpp  erpc_matrix_multiply_common.h  erpc_matrix_multiply_common.hpp  erpc_matrix_multiply_interface.cpp  erpc_matrix_multiply_interface.hpp  erpc_matrix_multiply_server.cpp  erpc_matrix_multiply_server.hpp  erpc_servo_configure.erpc  erpc_servo_configure_client.cpp  erpc_servo_configure_client.hpp  erpc_servo_configure_common.h  erpc_servo_configure_common.hpp  erpc_servo_configure_interface.cpp  erpc_servo_configure_interface.hpp  erpc_servo_configure_server.cpp  erpc_servo_configure_server.hpp  main.cc
